--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -1,22 +1,37 @@
 # Kodi Media Center language file
 # Addon Name: Nova Plus
 # Addon id: plugin.video.novaplus.cz
-# Addon Provider: Jiri Vyhnalek, wombat
+# Addon Provider: wombat
 msgid ""
 msgstr ""
-"Project-Id-Version: Kodi Addons\n"
-"Report-Msgid-Bugs-To: https://forum.kodi.tv/\n"
-"POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: Kodi Translation Team\n"
-"Language-Team: Team-Kodi\n"
-"MIME-Version: 1.0\n"
+
 "Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
-"Language: en_GB\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: en\n"
 
 msgctxt "#30001"
-msgid "All shows"
+msgid "Recent Episodes"
 msgstr ""
 
+msgctxt "#30002"
+msgid "TOP Shows"
+msgstr ""
+
+msgctxt "#30003"
+msgid "Shows"
+msgstr ""
+
+msgctxt "#30004"
+msgid "Next videos"
+msgstr ""
+
+msgctxt "#30005"
+msgid "Go to show"
+msgstr ""
+
+msgctxt "#30006"
+msgid "No stream found"
+msgstr ""
+
+msgctxt "#30007"
+msgid "Categories"
+msgstr ""
