--- a/resources/language/resource.language.cs_cz/strings.po
+++ b/resources/language/resource.language.cs_cz/strings.po
@@ -35,3 +35,7 @@ msgstr "Žádný stream nenalezen"
 msgctxt "#30007"
 msgid "Categories"
 msgstr "Kategorie"
+
+msgctxt "#30008"
+msgid "Source"
+msgstr "Zdroj"
