--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -36,6 +36,10 @@ msgctxt "#30007"
 msgid "Categories"
 msgstr ""
 
-msgctxt "#30008"
+msgctxt "#31001"
+msgid "General"
+msgstr ""
+
+msgctxt "#31002"
 msgid "Source"
 msgstr ""
