--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -13,7 +13,7 @@ msgid "Recent Episodes"
 msgstr ""
 
 msgctxt "#30002"
-msgid "TOP Shows"
+msgid "Best"
 msgstr ""
 
 msgctxt "#30003"
@@ -38,6 +38,14 @@ msgstr ""
 
 msgctxt "#30008"
 msgid "Live"
+msgstr ""
+
+msgctxt "#30009"
+msgid "New"
+msgstr ""
+
+msgctxt "#30010"
+msgid "All"
 msgstr ""
 
 msgctxt "#31001"
