[plugin.video.novaplus.cz] 1.4.1
fix changes on the web

--- a/resources/language/resource.language.cs_cz/strings.po
+++ b/resources/language/resource.language.cs_cz/strings.po
@@ -13,8 +13,8 @@ msgid "Recent Episodes"
 msgstr "Poslední díly"
 
 msgctxt "#30002"
-msgid "Best"
-msgstr "Nejlepší"
+msgid "TOP Shows"
+msgstr "TOP pořady"
 
 msgctxt "#30003"
 msgid "Shows"
