[plugin.video.novaplus.cz] 1.4.3
fix pagination, more improvements

--- a/resources/language/resource.language.cs_cz/strings.po
+++ b/resources/language/resource.language.cs_cz/strings.po
@@ -64,6 +64,10 @@ msgctxt "#30014"
 msgid "Samples"
 msgstr "Ukázky"
 
+msgctxt "#30015"
+msgid "No shows"
+msgstr "Pořad nelze zobrazit"
+
 msgctxt "#31001"
 msgid "General"
 msgstr "Obecné"
