--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -64,6 +64,10 @@ msgctxt "#30014"
 msgid "Samples"
 msgstr ""
 
+msgctxt "#30015"
+msgid "No shows"
+msgstr ""
+
 msgctxt "#31001"
 msgid "General"
 msgstr ""
